Leader board working

--- a/CityScramble/InfusionGames.CityScramble/InfusionGames.CityScramble/Views/LeaderView.xaml
+++ b/CityScramble/InfusionGames.CityScramble/InfusionGames.CityScramble/Views/LeaderView.xaml
@@ -16,10 +16,34 @@
                 Style="{StaticResource ListViewStyle}"
                 HasUnevenRows="True"
                 GroupHeaderTemplate="{StaticResource GroupHeaderTemplate}"
-                ItemsSource="{Binding SelectedRace.Teams}"
+                ItemsSource="{Binding teams}"
+                
               >
-        
-      </ListView>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <!--<TextCell Text="{Binding Name}" 
+                      Detail="{Binding ., Converter={StaticResource dateConverter}"/>-->
+
+                        <!-- List Race Details:
+                - Name
+                - Start / End
+                - Location ?
+                - Count down timer?
+                - Enrolled indicator
+              -->
+                        <ViewCell>
+                            <StackLayout Padding="30,8,8,30"
+                           HorizontalOptions="FillAndExpand"
+						   VerticalOptions="FillAndExpand">
+                                <Label Text="{Binding Name}"
+                       TextColor="Black"
+                       />
+                                
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
     </StackLayout>
   </AbsoluteLayout>
 </ContentView>
